--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "date-fns": "^4.1.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-gifted-charts": "^1.4.56",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-switch-selector": "^2.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
